--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
   </head>
   <body>
     <header>
-      <nav>
-        <h3>G3 Architects</h3>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Login</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <h3 class="nav-title">G3 Architects</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Login</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="container">
+        <div class="banner">
+          <h1 class="banner-titel">Brand New Group of Architects</h1>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
