--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
+    <!-- HEADER START -->
     <header>
       <div class="container">
         <nav>
@@ -35,7 +36,48 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <!-- HEADER END -->
+
+    <!-- MAIN SECTION START -->
+    <main>
+      <!-- FEATURES START -->
+      <section class="section-features">
+        <div class="container">
+          <div class="section-features-container">
+            <div class="section-features-column">
+              <div class="section-features-gallery">
+                <div class="section-features-gallery-item">
+                  <img src="images/team1.png" alt="Image 1" />
+                </div>
+                <div class="section-features-gallery-item">
+                  <img src="images/team2.png" alt="Image 2" />
+                </div>
+                <div class="section-features-gallery-item">
+                  <img src="images/team3.png" alt="Image 3" />
+                </div>
+                <div class="section-features-gallery-item">
+                  <img src="images/team4.png" alt="Image 4" />
+                </div>
+              </div>
+            </div>
+            <div class="section-features-column">
+              <h2 class="section-features-column-title">
+                Quick list <span class="highlight-1">of Our</span>
+                <span class="highlight-2">Features</span>
+              </h2>
+              <p class="section-features-column-description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
+              <button class="btn-primary">Explore More</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FEATURES END -->
+    </main>
+    <!-- MAIN SECTION END -->
     <footer></footer>
   </body>
 </html>
