--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
     <!-- MAIN SECTION START -->
     <main>
       <!-- FEATURES START -->
-      <section class="section-features">
+      <section class="section-team">
         <div class="container">
-          <div class="section-features-container">
-            <div class="section-features-column">
-              <div class="section-features-gallery">
-                <div class="section-features-gallery-item">
+          <div class="section-team-container">
+            <div class="section-team-column">
+              <div class="section-team-gallery">
+                <div class="section-team-gallery-item">
                   <img src="images/team1.png" alt="Image 1" />
                 </div>
-                <div class="section-features-gallery-item">
+                <div class="section-team-gallery-item">
                   <img src="images/team2.png" alt="Image 2" />
                 </div>
-                <div class="section-features-gallery-item">
+                <div class="section-team-gallery-item">
                   <img src="images/team3.png" alt="Image 3" />
                 </div>
-                <div class="section-features-gallery-item">
+                <div class="section-team-gallery-item">
                   <img src="images/team4.png" alt="Image 4" />
                 </div>
               </div>
             </div>
-            <div class="section-features-column">
-              <h2 class="section-features-column-title">
-                Quick list <span class="highlight-1">of Our</span>
+            <div class="section-team-column">
+              <h2 class="section-team-column-title">
+                Quick list <span class="highlight-1">of Our</span> <br />
                 <span class="highlight-2">Features</span>
               </h2>
-              <p class="section-features-column-description">
+              <p class="section-team-column-description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised words which don't look even
