Added Feature section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- MAIN SECTION START -->
     <main>
-      <!-- FEATURES START -->
+      <!-- TEAM START -->
       <section class="section-team">
         <div class="container">
           <div class="section-team-container">
@@ -75,7 +75,71 @@
           </div>
         </div>
       </section>
-      <!-- FEATURES END -->
+      <!-- TEAM END -->
+
+      <!-- FEATURES SECTION START -->
+      <section class="features-section">
+        <div class="container">
+          <div class="features-section-container">
+            <div class="features-section-column">
+              <h2 class="features-section-title">
+                Features you will <br />
+                love & enjoy
+              </h2>
+              <p class="features-section-description m-t">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
+
+              <div class="features-section-column-item m-t">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="features-section-column-item">
+                <h4>Drag & Drop Builder</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="features-section-column-item">
+                <h4>Awesome Modern Design</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+              <div class="features-section-column-item">
+                <h4>Super Easy to Edit</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </div>
+            </div>
+            <div class="features-section-column">
+              <div class="card">
+                <img src="images/architect.png" alt="" />
+                <div class="card-caption">
+                  <h3>
+                    <span class="year-10">10+Year</span>
+                    <span class="exper">Experience</span>
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FEATURES SECTION END -->
     </main>
     <!-- MAIN SECTION END -->
     <footer></footer>
