--- a/index.html
+++ b/index.html
@@ -140,6 +140,49 @@
         </div>
       </section>
       <!-- FEATURES SECTION END -->
+
+      <!-- FACT SECTION START -->
+      <section class="section-fact">
+        <div class="container">
+          <div class="section-fact-title-box">
+            <h2>Some Facts</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration.
+            </p>
+          </div>
+
+          <div class="section-fact-container">
+            <div class="section-fact-item">
+              <img src="images/icons/ribon.png" alt="Ribon image" />
+              <h5>54</h5>
+              <p>Awards Winnings</p>
+            </div>
+            <div class="section-fact-item">
+              <img src="images/icons/projects.png" alt="Projects image" />
+              <h5>1458</h5>
+              <p>Project Finished</p>
+            </div>
+            <div class="section-fact-item">
+              <img src="images/icons/customers.png" alt="customers image" />
+              <h5>590</h5>
+              <p>Clients Worked</p>
+            </div>
+            <div class="section-fact-item">
+              <img src="images/icons/email.png" alt="email image" />
+              <h5>22578</h5>
+              <p>Email Send</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FACT SECTION END -->
+
+      <!-- SPONSOR SECTION START -->
+      <section class="section-sponsor">
+        <div class="container"></div>
+      </section>
+      <!-- SPONSOR SECTION END -->
     </main>
     <!-- MAIN SECTION END -->
     <footer></footer>
