--- a/index.html
+++ b/index.html
@@ -180,7 +180,32 @@
 
       <!-- SPONSOR SECTION START -->
       <section class="section-sponsor">
-        <div class="container"></div>
+        <div class="container">
+          <div class="section-sponsor-title-box">
+            <h2>Our Sponsors</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration.
+            </p>
+          </div>
+          <div class="section-sponsor-container">
+            <div class="section-sponsor-item">
+              <img src="images/sponsors/spotify.png" alt="Sponsor image 1" />
+            </div>
+            <div class="section-sponsor-item">
+              <img src="images/sponsors/amazon.png" alt="Sponsor image 2" />
+            </div>
+            <div class="section-sponsor-item">
+              <img src="images/sponsors/google.png" alt="Sponsor image 3" />
+            </div>
+            <div class="section-sponsor-item">
+              <img src="images/sponsors/telerama.png" alt="Sponsor image 4" />
+            </div>
+            <div class="section-sponsor-item">
+              <img src="images/sponsors/figma.png" alt="Sponsor image 5" />
+            </div>
+          </div>
+        </div>
       </section>
       <!-- SPONSOR SECTION END -->
     </main>
