Added footer section with reponsive styling

--- a/index.html
+++ b/index.html
@@ -210,6 +210,15 @@
       <!-- SPONSOR SECTION END -->
     </main>
     <!-- MAIN SECTION END -->
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="footer-text-box">
+          <p>
+            &copy;All Right Reserved By G3-Architects.
+            <strong>Developed By Shahed</strong>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
